HelloUltraviolet/Fixtures/RejectedSource/Expressions/EnumDuplicateVariant/Expected.uv
//! Expected diagnostic metadata for the EnumDuplicateVariant rejected-source specimen.

expectedDiagnostic("E-TYP-2002", "Enum-Variant-Dup")
